fixed show page spacing

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,6 +1,6 @@
 .show-div {
   width: 1170px;
-  padding: 10px;
+  padding: 30px;
   margin-bottom: 30px;
   background-color: white;
 }
